--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
         android:id="@+id/linearLayout">
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/title_preference"
             android:text="@string/message_preferences"
             android:layout_width="wrap_content"
@@ -20,172 +20,185 @@
             android:padding="15dp"
             android:textColor="@color/colorPrimary"
             android:textSize="16dp"
-            android:background="@drawable/border_bottom_primary"/>
+            android:background="@drawable/border_bottom_primary"/>-->
 
-        <RelativeLayout
+        <TableLayout
+            android:id="@+id/preferences"
+            android:paddingTop="5dp"
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Paternidad"
-                android:id="@+id/check_bebes"
-                android:checked="false"
-                android:buttonTint="#4cb6c4" />
+            android:stretchColumns="*" >
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Aprendizaje"
-                android:id="@+id/check_aprendizaje"
-                android:checked="false"
-                android:layout_below="@+id/check_bebes"
-                android:layout_alignLeft="@+id/check_bebes"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/check_bebes"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_1"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_bebes"
+                    android:text="Bebés"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_ninos"
+                    android:text="Niños"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Desarrollo cognitivo"
-                android:id="@+id/check_cognitivo"
-                android:checked="false"
-                android:layout_below="@+id/check_aprendizaje"
-                android:layout_alignLeft="@+id/check_aprendizaje"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/check_aprendizaje"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_3"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_adolescentes"
+                    android:text="Adolescentes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_jovenes"
+                    android:text="Jóvenes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Bebés"
-                android:id="@+id/checkBox"
-                android:checked="false"
-                android:layout_above="@+id/check_aprendizaje"
-                android:layout_alignLeft="@+id/check_salud"
-                android:layout_alignStart="@+id/check_salud"
-                android:elegantTextHeight="false"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_2"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_aprendizaje"
+                    android:text="Aprendizaje"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_comportamiento"
+                    android:text="Comportamiento"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Salud"
-                android:id="@+id/check_salud"
-                android:checked="false"
-                android:layout_below="@+id/checkBox"
-                android:layout_alignLeft="@+id/check_disciplina"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/check_disciplina"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_4"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_comunicacion"
+                    android:text="Comunicación"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_problemas_sociales"
+                    android:text="Problemas Sociales"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Disciplina"
-                android:id="@+id/check_disciplina"
-                android:checked="false"
-                android:layout_below="@+id/check_salud"
-                android:layout_toRightOf="@+id/check_cognitivo"
-                android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/check_cognitivo"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_5"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_salud"
+                    android:text="Salud"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_alimentacion"
+                    android:text="Alimentación"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Niños"
-                android:id="@+id/checkBox4"
-                android:checked="false"
-                android:layout_below="@+id/check_cognitivo"
-                android:layout_alignLeft="@+id/check_cognitivo"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/check_cognitivo"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_6"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_divorcio"
+                    android:text="Divorcio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_adopcion"
+                    android:text="Adopción"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Problemas Sociales"
-                android:id="@+id/check_problemas"
-                android:checked="false"
-                android:layout_below="@+id/checkBox4"
-                android:layout_marginTop="5dp"
-                android:layout_alignLeft="@+id/check_cognitivo"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_7"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_efermedades"
+                    android:text="Enfermedades"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_discapacidades"
+                    android:text="Discapacidades"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Comportamiento"
-                android:id="@+id/check_comportamiento"
-                android:checked="false"
-                android:layout_below="@+id/check_problemas"
-                android:layout_marginTop="5dp"
-                android:layout_alignLeft="@+id/check_cognitivo"
-                android:buttonTint="#4cb6c4" />
+            <TableRow
+                android:id="@+id/row_8"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="1dp">
+                <CheckBox
+                    android:id="@+id/check_recreacion"
+                    android:text="Recreación"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+                <CheckBox
+                    android:id="@+id/check_sexualidad"
+                    android:text="Sexualidad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:buttonTint="#4cb6c4" />
+            </TableRow>
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/check_niños"
-                android:checked="false"
-                android:layout_below="@+id/check_comportamiento"
-                android:layout_marginTop="5dp"
-                android:layout_alignLeft="@+id/check_cognitivo"
-                android:buttonTint="#4cb6c4"
-                android:text="Divorcio" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Adopción"
-                android:id="@+id/check_adopcion"
-                android:checked="false"
-                android:layout_below="@+id/check_disciplina"
-                android:layout_alignRight="@+id/check_disciplina"
-                android:layout_marginTop="5dp"
-                android:layout_alignEnd="@+id/check_disciplina"
-                android:buttonTint="#4cb6c4" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Desarrollo Emocional"
-                android:id="@+id/check_desarrollo"
-                android:checked="false"
-                android:layout_below="@+id/check_adopcion"
-                android:layout_toRightOf="@+id/check_problemas"
-                android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/check_problemas"
-                android:buttonTint="#4cb6c4" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/check_escuela"
-                android:checked="false"
-                android:layout_below="@+id/check_desarrollo"
-                android:layout_alignLeft="@+id/check_desarrollo"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/check_desarrollo"
-                android:buttonTint="#4cb6c4"
-                android:text="Adolescentes" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Enfermedades"
-                android:id="@+id/check_efermedades"
-                android:checked="false"
-                android:layout_below="@+id/check_escuela"
-                android:layout_alignLeft="@+id/check_desarrollo"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/check_desarrollo"
-                android:buttonTint="#4cb6c4" />
+        </TableLayout>
 
             <!--<Button
                 android:id="@+id/btn_acept_preferences"
@@ -195,8 +208,6 @@
                 android:layout_marginTop="39dp"
                 android:layout_below="@+id/check_comportamiento"
                 android:layout_centerHorizontal="true" />-->
-
-        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
