--- a/app/src/main/res/layout/view_categories_gurus.xml
+++ b/app/src/main/res/layout/view_categories_gurus.xml
@@ -20,10 +20,22 @@
 
     <TextView
         android:id="@+id/txt_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="14sp"
+        android:text="Comportamiento"
+        android:textColor="#333333"
+        android:layout_marginTop="9dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txt_total_gurus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="14sp"
+        android:text=" ( 3 )"
         android:textColor="#333333"
         android:layout_marginTop="9dp"
         android:textStyle="bold" />
