--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,12 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1">
-            <Button
+            <ImageButton
                 android:id="@+id/back_home"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="21dp"
+                android:layout_height="21dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/ico_back"
+                android:padding="3dp"
                 android:onClick="backProfile"/>
             <ImageView
                 android:layout_width="100dp"
@@ -41,7 +42,7 @@
             <Button
                 android:layout_width="25dp"
                 android:layout_height="24dp"
-                android:layout_marginLeft="90dp"
+                android:layout_marginLeft="82dp"
                 android:layout_marginTop="5dp"
                 android:background="@mipmap/ic_edit_white_square_24"
                 android:onClick="editProfile"/>
