--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -38,7 +38,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="jjj"
+                    android:text=""
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:singleLine="false"
@@ -130,6 +130,7 @@
                 android:text="Aprendizaje"
                 android:visibility="gone" />
     </LinearLayout>
+
         <!-- Reporte -->
 
         <LinearLayout
@@ -137,7 +138,6 @@
             android:layout_height="wrap_content"
             android:paddingTop="6dp"
             android:paddingBottom="6dp">
-
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -186,15 +186,16 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="395dp"
         android:background="@color/lightGrey"
         android:weightSum="1">
 
         <!-- Container Answers -->
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="331dp"
-            android:layout_marginLeft="15dp"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="2dp"
             android:orientation="vertical"
             android:background="@color/colorPrimaryLabel"
             android:layout_weight="0.75">
@@ -224,6 +225,9 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />-->
         </LinearLayout>
+    </LinearLayout>
+
+        <!-- Boton Responder -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -239,23 +243,9 @@
                 android:background="@drawable/button_fill_primary"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginRight="90dp"
-                android:layout_marginLeft="90dp"
+                android:layout_marginBottom="0dp"
                 android:clickable="true"
                 android:onClick="answer"/>
         </LinearLayout>
-
-    </LinearLayout>
-    <!--<Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_answer"
-        android:id="@+id/btn_answer"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:onClick="answer" />-->
     </LinearLayout>
 </LinearLayout>
