--- a/app/src/main/res/layout/fragment_item_post.xml
+++ b/app/src/main/res/layout/fragment_item_post.xml
@@ -89,7 +89,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="-2dp"
+        android:layout_marginTop="2dp"
+        android:paddingBottom="2dp"
         android:gravity="left" >
         <TextView
             android:id="@+id/txt_ptitle"
