Implementacion del buscador : preguntas

--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -76,7 +76,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="70dp"-->
 
-        <TextView
+        <!--<TextView
             android:id="@+id/txt_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,6 +84,6 @@
             android:textAlignment="center"
             android:textSize="11sp"
             android:textColor="#d3d3d3"
-            android:text="" />
+            android:text="" />-->
     </LinearLayout>
 </LinearLayout>
