--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,22 +9,22 @@
         layout="@layout/toolbar_action">
     </include>
 
-    <!--<TextView
-        android:id="@+id/test"
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:paddingBottom="5dp"
-        android:paddingTop="15dp"
-        android:paddingLeft="10dp"
-        android:textColor="@color/colorPrimary"
-        android:textSize="12dp"/>-->
-
     <include
         android:id="@+id/toolbar_tabs"
         layout="@layout/toolbar_tabs">
     </include>
+
+    <FrameLayout
+        android:id="@+id/layout_search_results"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!--<include
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layout_search_results"
+        layout="@layout/fragment_search_results">
+    </include>-->
 
 
     <android.support.v4.view.ViewPager
