--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,8 +10,9 @@
     android:background="#ff3dc0ff">
 
     <TextView
+        android:id="@+id/txt_results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/search_hint" />
+        android:text="Resultado de busqueda" />
 
 </RelativeLayout>
