--- a/app/src/main/res/menu/action_bar.xml
+++ b/app/src/main/res/menu/action_bar.xml
@@ -4,12 +4,17 @@
     xmlns:appcompat="http://schemas.android.com/tools">
 
     <!-- Search -->
-    <item
-        android:id="@+id/action_buscar"
+    <!--<item
+        android:id="@+id/action_search"
         android:icon="@drawable/ico_search"
         android:title="@string/action_buscar"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always|never" />
+        app:showAsAction="always|never" />-->
+    <item android:id="@+id/action_search"
+        android:title="@string/action_buscar"
+        android:icon="@drawable/ico_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
     <!--Profile-->
     <item
